# piracer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bench_comparison.csv  benchmark_sample.csv  vcpkg.json
.github/workflows/: ci.yml
docs/: architecture.md  benchmarks.md  roadmap.md
include/piracer/: algorithm_factory.hpp  bigmul.hpp  bsplit.hpp  checkpoint.hpp  chudnovsky.hpp  cli_utils.hpp  competition.hpp  enterprise.hpp  format.hpp  gpu_backend.hpp  memory_pool.hpp  platform.hpp  profiler.hpp  progress.hpp  selftest.hpp  simd.hpp  thread_pool.hpp  version.hpp
scripts/: bench.py  bench.sh  bench_extreme.py  bench_visualize.py  bench_vs_minipi.py  setup_minipi.sh  test_cross_platform.py
src/alg/pi/: bsplit.cpp  chudnovsky.cpp
src/cli/: main.cpp
src/core/: bigmul.cpp  checkpoint.cpp  format.cpp  progress.cpp  selftest.cpp  thread_pool.cpp
test_charts/: performance_report.txt
